Update API docs to remove google custom and add api keys
